# OtakuDeck

./: .env.example  .gitignore  README.md  SETUP.md  index.html  mal.config.json.example  package-lock.json  package.json  translate.config.json.example  vite.config.ts
.github/workflows/: ci.yml  release.yml
android-extras/kotlin/: AiringTodayWidgetProvider.kt  WidgetPeriodicWorker.kt  WidgetRefresh.kt  WidgetScheduler.kt
docs/plans/: multi-account-mal.md
scripts/: check-env-mal.mjs  generate-icons.mjs  patch-android-icons.mjs  patch-android-signing.mjs  patch-android-widget.mjs  setup.mjs  sign-android-apk.mjs  sync-bundled-mal-client.mjs  sync-update-manifest.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  cover_cache.rs  lib.rs  main.rs  notifications.rs  preferences.rs  updates.rs  widget.rs
src-tauri/src/accounts/: mod.rs
src-tauri/src/auth/: config.rs  mod.rs  oauth.rs  pkce.rs  storage.rs
src-tauri/src/mal/: calendar.rs  client.rs  home_feed.rs  mod.rs  suggestions.rs  types.rs
src-tauri/src/translate/: cache.rs  config.rs  deepl.rs  google.rs  mod.rs  mymemory.rs  quota.rs  split.rs
src/components/: AccountSwitcher.tsx  AnimeCard.tsx  AnimeGrid.tsx  AnimeModal.tsx  CacheStatusBar.tsx  CachedCover.tsx  CollapsibleFilter.tsx  FilterChips.tsx  GenreFilterBar.tsx  GenrePicker.tsx  GlobalSearch.tsx  MainLayout.tsx  MultiFilterChips.tsx  NewEpisodeBadge.tsx  (+18 more)
updates/: manifest.json
(+73 files in other folders)
