[package]
name = "otakudeck"
version = "0.1.1"
description = "Cross-platform MyAnimeList client"
authors = ["OtakuDeck"]
edition = "2021"

[lib]
name = "otakudeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
time = { version = "0.3", features = ["local-offset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
url = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
dotenvy = "0.15"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
